src/Services/IdentityService/IdentityApi/Deploy/backend/deployment.yaml

# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: cf-pv-claim
#   labels:
#     app: <env>-backend-<project>
# spec:
#   storageClassName: nfs-storage
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 500Mi
apiVersion: v1
kind: Namespace
metadata:
  name: <env>-backend-<project>
