src/Services/IdentityService/IdentityApi/Deploy/backend/backend-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <env>-backend-<project>
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: <env>-backend-<project>-ingress
  namespace: <env>-backend-<project>
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/configuration-snippets: |
      rewrite ^/<env>-backend-<project>/(.*)$ /$1/ redirect;
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix:  "<env>-backend-<project>"
spec:
  tls:
  - hosts:
        - <HOST_NAME>
    secretName: <HOST_SECRET>
  rules:
  - host: <HOST_NAME>
    http:
      paths:
      - path: /<env>-backend-<project>(/|$)(.*)
        backend:
          serviceName: <env>-backend-<project>-service
          servicePort: 80


#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: dapr-<env>-backend-<project>-ingress
#  namespace: <env>-backend-<project>
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
#    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
#    nginx.ingress.kubernetes.io/rewrite-target: "/v1.0/invoke/identity-api/method/$2"
#    nginx.ingress.kubernetes.io/enable-access-log: "true"
#    #nginx.ingress.kubernetes.io/x-forwarded-prefix:  "dapr-<env>-backend-<project>"
#    nginx.ingress.kubernetes.io/x-forwarded-prefix:  "<env>-backend-<project>"
#spec:
#  tls:
#  - hosts:
#        - <HOST_NAME>
#    secretName: <HOST_SECRET>
#  rules:
#  - host: <HOST_NAME>
#    http:
#      paths:
#      #- path: /dapr-<env>-backend-<project>(/|$)(.*)
#      - path: /<env>-backend-<project>(/|$)(.*)
#        backend:
#          serviceName: <env>-backend-<project>-service
#          servicePort: 81
